2007-09-01  Emmanuele Bassi  <ebassi@gnome.org>

	* configure.in: Post-release bump to 2.19.92. Bump up
	the required GTK+ version to 2.11.6 for the new tooltips
	API.

	* README: Update the requirements.

2007-08-27  Emmanuele Bassi  <ebassi@gnome.org>

	* configure.in:
	* README:
	* NEWS: Release 2.19.91.

2007-08-23  Emmanuele Bassi  <ebassi@gnome.org>

	* configure.in:
	* README: Bump up the required GLib version to 2.13.3, for
	g_get_user_special_dir().

2007-08-18  Emmanuele Bassi  <ebassi@gnome.org>

	* configure.in:
	* README: Bump up the required GTK+ version to 2.10.0, for
	gtk_text_buffer_get_has_selection(). (#421927, Loic Moinier)

2007-08-17  Emmanuele Bassi  <ebassi@gnome.org>

	* baobab/data/baobab.desktop.in.in:
	* gfloppy/gfloppy.desktop.in:
	* gnome-dictionary/data/gnome-dictionary.desktop.in.in:
	* gnome-screenshot/gnome-screenshot.desktop.in:
	* gsearchtool/gnome-search-tool.desktop.in:
	* logview/gnome-system-log.desktop.in.in: Remove invalid .desktop
	category "Application". (#417654, Christian Kirbach)

2007-08-13  Emmanuele Bassi  <ebassi@gnome.org>

	* configure.in: Post-release bump to 2.19.91

2007-08-13  Emmanuele Bassi  <ebassi@gnome.org>

	* configure.in:
	* README:
	* NEWS: Release 2.19.90.

2007-08-05  Emmanuele Bassi  <ebassi@gnome.org>

	* configure.in:
	* README: Post-release bump to 2.19.0

2007-03-11  Emmanuele Bassi  <ebassi@gnome.org>

	* configure.in:
	* NEWS:
	* README: Stable release, 2.18.0.

2007-02-13  Emmanuele Bassi  <ebassi@gnome.org>

	* configure.in: Post release bump to 2.17.93.

2007-02-12  Emmanuele Bassi  <ebassi@gnome.org>

	* configure.in:
	* NEWS:
	* README: Release 2.17.92.

2007-02-11  Emmanuele Bassi  <ebassi@gnome.org>

	* configure.in: More clean-ups.

2007-02-04  Emmanuele Bassi  <ebassi@gnome.org>

	* configure.in: Add a configure switch for enabling or disabling
	building GFloppy: you can force disabling it even if the requirements
	were met. (#404236)
