@@ -10,6 +10,7 @@ Terminal=false
 Type=Application
 StartupNotify=true
 Categories=GTK;GNOME;System;
+OnlyShowIn=GNOME
 X-GNOME-Bugzilla-Bugzilla=GNOME
 X-GNOME-Bugzilla-Product=gnome-utils
 X-GNOME-Bugzilla-Component=baobab
