@@ -8,6 +8,7 @@ Type=Application
 Icon=accessories-dictionary.png
 StartupNotify=true
 Categories=GNOME;GTK;Utility;
+OnlyShowIn=GNOME
 X-GNOME-DocPath=gnome-dictionary/gnome-dictionary.xml
 X-GNOME-Bugzilla-Bugzilla=GNOME
 X-GNOME-Bugzilla-Product=gnome-utils
