@@ -8,6 +8,7 @@ Type=Application
 Icon=applets-screenshooter
 StartupNotify=true
 Categories=GTK;GNOME;Utility;
+OnlyShowIn=GNOME
 X-GNOME-Bugzilla-Bugzilla=GNOME
 X-GNOME-Bugzilla-Product=gnome-utils
 X-GNOME-Bugzilla-Component=screenshot
