@@ -8,6 +8,7 @@ Terminal=false
 Type=Application
 StartupNotify=true
 Categories=GNOME;GTK;Core;
+OnlyShowIn=GNOME
 X-GNOME-DocPath=gnome-search-tool/gnome-search-tool.xml
 X-GNOME-Bugzilla-Bugzilla=GNOME
 X-GNOME-Bugzilla-Product=gnome-utils
