@@ -8,6 +8,7 @@ Terminal=false
 Type=Application
 StartupNotify=true
 Categories=GTK;GNOME;System;Monitor;X-Red-Hat-Base;
+OnlyShowIn=GNOME
 X-GNOME-DocPath=gnome-system-log/gnome-system-log.xml
 X-GNOME-Bugzilla-Bugzilla=GNOME
 X-GNOME-Bugzilla-Product=gnome-utils
