@@ -1,3 +1,13 @@
+2007-09-04  Emmanuele Bassi  <ebassi@gnome.org>
+
+	* gnome-screenshot/gnome-screenshot.desktop.in:
+	* baobab/data/baobab.desktop.in.in:
+	* gnome-dictionary/data/gnome-dictionary.desktop.in.in:
+	* gsearchtool/gnome-search-tool.desktop.in:
+	* logview/gnome-system-log.desktop.in.in:
+	* gfloppy/gfloppy.desktop.in: Only show the GNOME Utilities
+	in GNOME menus. (#431117, Sven Arvidsson)
+
 2007-09-01  Emmanuele Bassi  <ebassi@gnome.org>
 
 	* configure.in: Post-release bump to 2.19.92. Bump up
